# z3alpha

./: .gitignore  .gitmodules  LICENSE  README.md  dev_test.py  env_config.json  lia.def  pyproject.toml  s2_syn.py  stage_synth.py  synthesize.py  synthesize_full.py  synthesize_s1.py  synthesize_s2.py
JHC/: .gitignore  README.md  run_MachSMT.py  run_MachZ3alpha.py
alphasmt/: environment.py  evaluator.py  mcts.py  metaStratParser.py  params.py  selector.py  strat_tree.py  synthesize.py  utils.py  z3_strat_tree.py
benchmarks/: download_fastsmt_benchmarks.sh  download_lassoranker.sh  download_qflia.sh  download_qflra.sh  download_qfs.sh
data/: README.md
docs/: Z3ResultsSMTComp2025_Paul0529.txt  guideline.md  meeting_minutes.md  smtcomp24_stats.xlsx  smtcomp25_stats.xlsx
scripts/: anonymize.py  compute_run_metrics.py  dataset_create.py  eval_solvers.py  exp_tester.py  filter_benchmark.py  rename.sh  result_checker.py  sampling_benchmarks.py  select_benchmark.py  smtlib25_download.sh  smtlib_z3_evaluator.py  smtlib_z3_evaluator_config.json  validate_logic_configs.py
submission25/: package.sh  z3alpha.py
tests/: test_evaluator.py  test_experiment_metrics.py  test_linear_root_refresh.py  test_llm_prior.py  test_llm_prior_context.py  test_logic_config.py  test_param_selection.py  test_smt_select.py  test_stratified_dataset.py  test_synthesis_config.py  test_synthesis_e2e.py  test_z3alpha2_comp_docker.py  test_z3alpha2_submission.py  z3alpha2_submission_cases.py
z3alpha/: __init__.py  ast_nodes.py  environment.py  evaluator.py  experiment_metrics.py  logging_config.py  mcts.py  ml_selector.py  multiprocess_evaluator.py  new_evaluator.py  parallelRun.py  params.py  parser.py  resource_allocation.py  resource_logging.py  resource_monitor.py  selector.py  smt_select.py  solve.py  strat_runner.py  strat_tree.py  strat_tree_s1.py  strat_tree_s2.py  strategy_portfolio.py  strategy_tree.py  synthesis_config.py  synthesis_defaults.json  synthesize.py  tactic_catalog.py  (+2 more)
(+1065 files in other folders)
